; ModuleID = '/home/carl/AnghaBench/raspberry-pi-os/exercises/lesson04/2/bl4ckout31/src/extr_sched.c_switch_to.c'
source_filename = "/home/carl/AnghaBench/raspberry-pi-os/exercises/lesson04/2/bl4ckout31/src/extr_sched.c_switch_to.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.task_struct = type { i32 }

@current = common dso_local global %struct.task_struct* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @switch_to(%struct.task_struct* %0) #0 {
  %2 = alloca %struct.task_struct*, align 8
  %3 = alloca %struct.task_struct*, align 8
  store %struct.task_struct* %0, %struct.task_struct** %2, align 8
  %4 = load %struct.task_struct*, %struct.task_struct** @current, align 8
  %5 = load %struct.task_struct*, %struct.task_struct** %2, align 8
  %6 = icmp eq %struct.task_struct* %4, %5
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  br label %14

8:                                                ; preds = %1
  %9 = load %struct.task_struct*, %struct.task_struct** @current, align 8
  store %struct.task_struct* %9, %struct.task_struct** %3, align 8
  %10 = load %struct.task_struct*, %struct.task_struct** %2, align 8
  store %struct.task_struct* %10, %struct.task_struct** @current, align 8
  %11 = load %struct.task_struct*, %struct.task_struct** %3, align 8
  %12 = load %struct.task_struct*, %struct.task_struct** %2, align 8
  %13 = call i32 @cpu_switch_to(%struct.task_struct* %11, %struct.task_struct* %12)
  br label %14

14:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @cpu_switch_to(%struct.task_struct*, %struct.task_struct*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
